# tdo

./: Cargo.toml  README.md
documentation/: commands-cheat-sheet.md  design-spec.md
src/: main.rs  models.rs  services.rs  storage.rs  ui.rs
src/models/: area.rs  project.rs  store.rs  task.rs
src/services/: add.rs  areas.rs  projects.rs  tasks.rs
src/storage/: json.rs  migrations.rs
