[package]
name = "tdo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["serde","v4"] }
jiff = { version = "0.2.20", features = ["serde"] }
fs2 = "0.4.3"
thiserror = "2.0.18"
dirs = "6.0.0"
colored = "2.1"
